# agentic_historian

./: .env.gpustack  .gitignore  CONSOLIDATION_AND_FEEDBACK.md  HLS_MCP_PLAN.md  IDENTITY.md  IMPLEMENTATION_PLAN.md  IMPROVEMENT_PLAN.md  MEMORY.md  TOOLS.md  USER.md  agentic_historian_plan.md  batch_fetch.py  decode_one.py  digital_medievalist_MD_template.md  dmj_vol14_dl.py  dmj_vol14_download.py  dmj_vol14_retry.py  fix_hbls_mcp.sh  gpustack.env.example  hbls_build_report.md  kf-landing.html  ocr_pipeline.py  pr_body.md  pr_body_221.md  pr_body_222.md  process_images.py  requirements-dev.txt  save_fetched.py  ssrq_parse_ttl.py  update.sh  zenodo_htr_results.json
agentic_historian/: .gitignore  AGENTIC_HITL_PLAN.md  IMPLEMENTATION_PLAN.md  PROGRESS.md  README.md  __main__.py  _append_func.py  _fix_newline.py  _patch_orchestrator.py  add-z  agent_tools.py  bot.py  config.py  entity_index.py  entity_review.py  feedback_logger.py  fusion.py  gate3_entity_review.py  ingest.py  mcp_propose.py  nl_orchestrator.py  orchestrator.py  orchestrator_llm.py  patch_nginx.py  path_compare.py  persistent_views.py  progress.py  progress_reporter.py  pyproject.toml  reporter.py  requirements.txt  routing_card.py  routing_report.py  run_state.py  runstate.py  semantic.py  uncertainty.py  updater.py  voting.py
agentic_historian/agent_a/: __init__.py  dual_pipeline.py  ensemble.py  kraken_client.py  kraken_ocr.py  model_selector.py  models.py  ocr_pipeline.py  pary_ocr.py  reconcile.py  routing_prior.py
agentic_historian/agent_c/: entity_extraction.py
agentic_historian/agents/: corpus_analysis.py  entity_agent.py  meta_agent.py  search_agent.py  source_description.py  source_heuristic.py  text_recognition.py
agentic_historian/data/: .gitkeep
agentic_historian/docs/: knowledge_hub.md
agentic_historian/eval/: __init__.py  harness.py  metrics.py
agentic_historian/knowledge_hub/: __init__.py  hub.py  mcp_registry.py  rdf_export.py  store.py
agentic_historian/output_site/: README.md
agentic_historian/scripts/: pr.sh
agentic_historian/service/: __init__.py  kraken_service.py
agentic_historian/tests/: conftest.py  test_agent_tools.py  test_ah_100_correctness.py  test_ah_100_correctness_trio.py  test_ah_101_htr_qa.py  test_ah_102_natural_sort.py  test_ah_103_silent_truncation.py  test_ah_105_auth_and_path_traversal.py  test_ah_106_dotenv_no_override.py  test_ah_107_dual_selfqa.py  test_ah_108_hf_ocr_trocr_seq2seq.py  test_ah_109_pyproject_packaging.py  test_ah_110_kraken_registry_from_gateway.py  test_ah_111_cer_honesty_stopwords.py  test_ah_112_error_log_persistence.py  test_ah_113_repo_hygiene.py  test_ah_144_gateway_auth.py  test_ah_145_run_state.py  test_ah_145_runstate.py  test_ah_146_routing_card.py  test_ah_147_pinned_fields.py  test_ah_148_worker_queue.py  test_ah_149_gate2_compare.py  test_ah_150_persistent_views.py  test_ah_151_gate3_review.py  (+81 more)
tmp/: ssrq  (+10 more)
(+28146 files in other folders)
