[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-historian"
version = "0.1.0"
description = "Agentic Historian — multi-agent HTR/OCR pipeline for historical manuscripts"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Tobias Hodel", email = "tobias.hodel@unibe.ch"}
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Core dependencies — minimal install (Discord bot + config)
dependencies = [
    "py-cord>=2.6.1",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "openai>=1.40.0",
    "tenacity>=8.2.0",
    "requests>=2.31.0",
    "PyYAML>=6.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "webdav4>=0.11.0",   # SwitchDrive (WebDAV) ingestion — /pull, utils/switchdrive.py
]

# HTR / OCR via remote kraken service
[project.optional-dependencies]
kraken-remote = [
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "ujson>=5.10.0",
    "kraken>=4.0.0",
]

# Local HTR (downloads model weights — heavy)
htr-local = [
    "torch>=2.0.0",
    "kraken>=4.0.0",
    "opencv-python>=4.8.0.76",
]

# HuggingFace OCR (downloads model weights — heavy)
hf = [
    "transformers>=4.44.0",
    "huggingface_hub>=0.24.0",
    "torch>=2.0.0",
]

# Full HTR stack (kraken remote + local + HF)
htr = [
    "agentic-historian[htr-local,hf,kraken-remote]",
]

# Full development install
dev = [
    "agentic-historian[htr]",
    "setuptools>=61.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.1.0",
]

[project.scripts]
ah = "bot:main"        # CLI shortcut: ah run <file>
ah-bot = "bot:main"    # canonical entry point

[project.urls]
Homepage = "https://github.com/thodel/agentic_historian"
Repository = "https://github.com/thodel/agentic_historian"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentic_historian*"]
exclude = ["agentic_historian.tests*", "agentic_historian.eval*"]

[tool.setuptools.package-data]
agentic_historian = [
    "py.typed",
    "knowledge_hub/data/*.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist",
    "*.egg-info",
]

[tool.coverage.run]
branch = true
source = ["agentic_historian"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_also = [
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
